--- a/Plantillas sin usar/novedades/columnas.html
+++ b/Plantillas sin usar/novedades/columnas.html
@@ -21,10 +21,10 @@
 			<h3>Novedades</h3>
 			<div class="opciones">
 			<ul>
-			<li class="popular"></li>
-			<li class="descubre"></li>
-			<li class="novedades"></li>
-			<li class="actividad"></li>
+			<li class="novedades" title="Novedades" alt="novedades"></li>
+			<li class="descubre" title="Descubre" alt="descubre"></li>
+			<li class="popular" title="Popular" alt="Popular"></li>
+			<li class="actividad" title="Actividad" alt="actividad"></li>
 			</ul>
 			</div>
 			<ul class="contnedor caption">
@@ -149,11 +149,21 @@ src="http://www.youtube.com/embed/XGSy3_Czz8k">
 	             <img src="http://ar.cdn01.mundotkm.com/2013/01/jennifer-lawrence-oscar-ppal.jpg">
 	             </div>
                     <div class="contenido">
-                   <h4>Jennifer ha publicado un comentario en su tablón</h4>
+                   <h5>Jennifer ha publicado un comentario en su tablón</h5>
                    <span><blockquote>Lorem Ipsum is simply dummy text of the printing and typesetting indus</blockquote></span>
                   </div>
-	             <div>
 
+	            </li>
+
+	            <li>
+	             <div class="comm">
+	             <div class="img">
+	             <img src="http://ar.cdn01.mundotkm.com/2013/01/jennifer-lawrence-oscar-ppal.jpg">
+	             </div>
+                    <div class="contenido">
+                   <h5>Jennifer ha publicado un comentario en su tablón</h5>
+                   <span><blockquote>Lorem Ipsum is simply dummy text of the printing and typesetting indus</blockquote></span>
+                  </div>
 	            </li>
 			</ul>
 		</div>
