--- a/Plantillas sin usar/Widget novedades grupos a los que sigo/index.html
+++ b/Plantillas sin usar/Widget novedades grupos a los que sigo/index.html
@@ -17,19 +17,13 @@
   <body>
     <div id="contenedor">
       <div class="grupos">
-        <ul class="grup">
-          <li><img class="img" src="http://www.mis-dibujos-favoritos.com/Images/Large/Heroes-para-ninos-Troll-face-437429.png" alt="Smiley face" height="52" width="52">
-            <p>Yo tambien creo que las moscas traman algo con esa frotada de manos</p>
-            <ul class="controls">
-              <span class="fontawesome-heart"></span>
-              <span class="fontawesome-share"></span>
-              <span class="fontawesome-trash"></span>
+      <ul class="all">
+          <li><img src="http://i.kinja-img.com/gawker-media/image/upload/s--ZiACl9ua--/c_fit,fl_progressive,q_80,w_320/18k30uy46lijpjpg.jpg" alt="icon_group"><a>A epic group.</a></li>
+          <li><img src="http://i.kinja-img.com/gawker-media/image/upload/s--ZiACl9ua--/c_fit,fl_progressive,q_80,w_320/18k30uy46lijpjpg.jpg" alt="icon_group"><a>A epic group.</a></li>
+          <li><img src="http://i.kinja-img.com/gawker-media/image/upload/s--ZiACl9ua--/c_fit,fl_progressive,q_80,w_320/18k30uy46lijpjpg.jpg" alt="icon_group"><a>A epic group LOOOOOOOL.</a></li>
+        
 
-            </ul></li>
-             <li class="l"><img class="img" src="http://st3.flashrolls.net/wallpaper/147/6584472559da8ffab7961d9a5e399005.jpg" alt="Smiley face" height="52" width="52"><p>Pequeños toques hacen grandes rasgos.</p></li>
-                <li class="l2"><img class="img" src="http://www.nocturnar.com/imagenes/fotos/wallpapers-fondos-de-pantalla-wallpaper-wallpaper-lampadas-wallpapers.jpg" alt="Smiley face" height="52" width="52"><p>El presente ya es el porvenir y el olvido.</p></li>
-
-        </ul>
+      </ul>
       </div>
     </div>
   </body>
