--- a/Plantillas sin usar./Mensajes privados./mp.html
+++ b/Plantillas sin usar./Mensajes privados./mp.html
@@ -5,13 +5,29 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
     </head>
     <body>
-        <div id="panel">
-        <span class="fontawesome-envelope-alt"> Mensajes privados.</span>
-        <div class="entrada"><a class="fontawesome-list" href="#"> Bandeja de entrada.</a></div>
-            <div class="entrada"><a class="fontawesome-star" href="#"> Favoritos.</a></div>
-            <div class="entrada"><a class="fontawesome-minus-sign" href="#"> Spam.</a></div>
-        </div>
-        <span class="fontawesome-angle-left"> Mensajes con: Moltisanti <img target="persona" src="http://upload.wikimedia.org/wikipedia/en/f/ff/Christopher_Moltisanti.jpg"></img></span>
+
+ <nav class="box-tool">
+  <li><div class="logo"></div></li>
+  <li class="chat"><div></div></li>
+</nav>
+
+<aside>
+    <nav class="vertical">
+      <li class="perfil"><i class="fontawesome-user"></i>Recibidos</li>
+      <li class="Contraseña"><i class="fontawesome-lock"></i>Enviados</li>
+      <li class="Seguridad"><i class="fontawesome-eye-open"></i>Mis contactos</li>
+      <li class="Movil"><i class="fontawesome-envelope-alt"></i>Grupos</li>
+      <li class="widgets"><i class="fontawesome-list-ul"></i>Spam</li>
+      <li class="Diseño"><i class="fontawesome-dashboard"></i>Relaciones</li>
+      <li class="ban"><i class="fontawesome-minus-sign"></i>Cuentas bloqueadas</li>
+      <li><div class="entrada"><input type="search" target="search" placeholder="Busca un mensaje..."></input></div></li>
+    </nav>
+  </aside>
+
+<div class="messagewith">
+        <span class="fontawesome-angle-left"> Mensajes con: Moltisanti</span>
+</div>
+
         <section>
        <div class="me">
            <img target="me" src="http://www.sitesmexico.com/imagenes-2009/tony-montana-1.jpg"></img>
