--- a/Plantillas sin usar/Mensajes privados/mb.html
+++ b/Plantillas sin usar/Mensajes privados/mb.html
@@ -20,7 +20,7 @@ $(document).ready(function(){
 
  <script>
 $(function() {
-$( "#page-wrapper" ).draggable();
+$("#page-wrapper").draggable();
 });
 </script>
 
@@ -40,14 +40,14 @@ $( "#page-wrapper" ).draggable();
   </hgroup>
   <div id="page-wrapper">
   <h1></h1>
-  
-  <div id="status">Escribe un mensaje.</div>
+  <label for="Asunto">Asunto:</label><input type="text" id="Asunto" placeholder="Indica el asunto...">
+  <label for="Contactos">Contactos:</label><input type="text" id="Contactos" placeholder="Introduce el destinatario...">
   
   
   <form id="message-form2" action="#" method="post">
     <textarea id="message2" placeholder="Escribe tu mensaje aquí..." required></textarea>
-    <button type="submit"><i class="fa fa-paper-plane"></i> Enviar</button>
-    <button type="button" id="close"><i class="fa fa-remove"></i> Cerrar</button>
+    <button type="submit">Enviar</button>
+    <button type="button" id="close">Cerrar</button>
     <button class="fontawesome-bullhorn"></button>
     <button class="fontawesome-camera"></button>
     <button class="fontawesome-map-marker"></button>
