--- a/Plantillas sin usar/Mensajes privados/mb.html
+++ b/Plantillas sin usar/Mensajes privados/mb.html
@@ -61,7 +61,7 @@ $("#page-wrapper").draggable();
     
   </form>
 </div>
-              <aside>
+  <aside>
     <nav class="vertical">
       <li class="perfil"><i class="fontawesome-user"></i>Recibidos</li>
       <li class="Contraseña"><i class="fontawesome-lock"></i>Enviados</li>
@@ -75,33 +75,66 @@ $("#page-wrapper").draggable();
   </aside>
 
         <div class="wrapper">
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
-<blockquote>Lorem ipsum dolor sit amet...</blockquote>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
-<blockquote>Lorem ipsum dolor sit amet...</blockquote>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
-<blockquote>Lorem ipsum dolor sit amet...</blockquote>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
-<blockquote>Lorem ipsum dolor sit amet...</blockquote>
-</div>
-<div class="noti"> 
-<img src="http://th06.deviantart.net/fs70/PRE/f/2013/155/4/2/heisenberg_by_rickyart96-d67u5au.jpg" class="img-rounded"></img>
-<a target="name"> Heisenberg ha enviado un mensaje. </a><i>10 Agosto 2014, 10:42</i>
-<blockquote>Lorem ipsum dolor sit amet...</blockquote>
-</div>
-
-</div>
-</div>
+        <ul class="cnt">
+        		<li>
+            <div class="message">
+        			<div class="img_and_name">
+        			<a>Maria García Fernández</a>
+        			<img class="profile_img" src="https://randomuser.me/api/portraits/med/women/87.jpg" title="random_girl" alt="random_girl">
+        			</div>
+        				<div class="cuerpo">
+        					<h5>Asunto</h5>
+        						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at aliquet orci. Sed condimentum...</p>
+        					</div>
+        				<div class="cl">
+        					<ul class="controls_m">
+        					<li class="fontawesome-reply"></li>
+        					<li class="fontawesome-remove"></li>
+        					<li class="fontawesome-heart"></li>
+        					</ul>
+        					</div>
+        		</div>
+            </li>
+            <li>
+            <div class="message">
+              <div class="img_and_name">
+              <a>Maria García Fernández</a>
+              <img class="profile_img" src="https://randomuser.me/api/portraits/med/women/87.jpg" title="random_girl" alt="random_girl">
+              </div>
+                <div class="cuerpo">
+                  <h5>Asunto</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at aliquet orci. Sed condimentum...</p>
+                  </div>
+                <div class="cl">
+                  <ul class="controls_m">
+                  <li class="fontawesome-reply"></li>
+                  <li class="fontawesome-remove"></li>
+                  <li class="fontawesome-heart"></li>
+                  </ul>
+                  </div>
+            </div>
+            </li>
+                        <li>
+            <div class="message">
+              <div class="img_and_name">
+              <a>Maria García Fernández</a>
+              <img class="profile_img" src="https://randomuser.me/api/portraits/med/women/87.jpg" title="random_girl" alt="random_girl">
+              </div>
+                <div class="cuerpo">
+                  <h5>Asunto</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at aliquet orci. Sed condimentum...</p>
+                  </div>
+                <div class="cl">
+                  <ul class="controls_m">
+                  <li class="fontawesome-reply"></li>
+                  <li class="fontawesome-remove"></li>
+                  <li class="fontawesome-heart"></li>
+                  </ul>
+                  </div>
+            </div>
+            </li>
+            
+</ul>
+		</div>
     </body>
 </html>
