--- a/about/publications.html
+++ b/about/publications.html
@@ -1,4 +1,8 @@
-{% extends "about/base_about.html" %} {% block content %}<div id="blog-publications" class="container">{% include "about/entry_list_page.html" %}</div>{% block js %} {{ block.super }}<script src="{{ STATIC_URL }}js/el-pagination.js"></script><script>$.endlessPaginate({
-                paginateOnScroll: true,
-                paginateOnScrollMargin: 200
-            });</script>{% endblock %} {% endblock %}
+{% extends "about/base_about.html" %} {% block content %}
+    <div id="blog-publications" class="container">{% include "about/entry_list_page.html" %}</div>{% block js %}
+        {{ block.super }}
+        <script src="{{ STATIC_URL }}js/el-pagination.js"></script>
+        <script>$.endlessPaginate({
+            paginateOnScroll: true,
+            paginateOnScrollMargin: 200
+        });</script>{% endblock %} {% endblock %}
