--- a/about/base_about.html
+++ b/about/base_about.html
@@ -1,13 +1,14 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <link href="{{ STATIC_URL }}css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection">
-    <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="{{ STATIC_URL }}fonts/iconfont/material-icons.css">
-    <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico">
+    <link href="{% static "css/materialize.css" %}" type="text/css" rel="stylesheet" media="screen,projection">
+    <script src="{% static "js/jquery-3.1.0.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/jquery-migrate-1.4.1.min.js" %}" type="text/javascript"></script>
+    <link rel="stylesheet" href="{% static "fonts/iconfont/material-icons.css" %}">
+    <link rel="icon" type="image/ico" href="{% static "img/favicon.ico" %}">
     <style>.endless_container {
         text-align: center;
     }</style>{% block title %}<title>Blog de Skyfolk</title>{% endblock %}</head>
