--- a/about/password_recommendation.html
+++ b/about/password_recommendation.html
@@ -1,16 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/materialize.min.css" media="screen,projection">
-    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/password_recommendation.css">
-    <script type="text/javascript" src="{{ STATIC_URL }}js/materialize.min.js"></script>
-    <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico">
+    <link type="text/css" rel="stylesheet" href="{% static "css/materialize.min.css" %}" media="screen,projection">
+    <link type="text/css" rel="stylesheet" href="{% static "css/password_recommendation.css" %}">
+    <script src="{% static "js/jquery.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
+    <link rel="icon" type="image/ico" href="{% static "img/favicon.ico" %}">
     <meta charset="UTF-8">
     <meta name="description" content="Recomendaciones para escoger una buena contraseña.">
     <meta name="keywords" content="Contraseña, Escoger, Fuerte, Robar, Proteger, Privacidad">
     <meta name="viewport" content="width=device-width,maximum-scale=3,minimum-scale=0.5">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
     <title>Consejos para una buena contraseña</title></head>
 <body>
 <div class="container">
