--- a/about/publications.html
+++ b/about/publications.html
@@ -1,8 +1,10 @@
-{% extends "about/base_about.html" %} {% block content %}
+{% extends "about/base_about.html" %}
+{% load static %}
+{% block content %}
     <div id="blog-publications" class="container">{% include "about/entry_list_page.html" %}</div>{% block js %}
-        {{ block.super }}
-        <script src="{{ STATIC_URL }}js/el-pagination.js"></script>
-        <script>$.endlessPaginate({
-            paginateOnScroll: true,
-            paginateOnScrollMargin: 200
-        });</script>{% endblock %} {% endblock %}
+    {{ block.super }}
+    <script src="{% static "js/el-pagination.js" %}"></script>
+    <script>$.endlessPaginate({
+        paginateOnScroll: true,
+        paginateOnScrollMargin: 200
+    });</script>{% endblock %} {% endblock %}
