+ Mejoras en title de plantillas

--- a/account/account/email.html
+++ b/account/account/email.html
@@ -1,6 +1,6 @@
 {% extends "account/base_cf.html" %} {% load i18n %}
 {% load  static %}
-{% block title %}<title>Configuración - Email.</title>{% endblock %} {% block extra-css %}
+{% block title %}Configuración - Email{% endblock %} {% block extra-css %}
     <link rel="stylesheet" href="{% static "css/cf-email.css" %}" type="text/css" media="all">{% endblock %}
 {% block cf-title %}
     <div class="hgroup"><h4 class="cn">Email</h4><h6 class="ch">Administra tus direcciones email</h6>
