--- a/about/base_about.html
+++ b/about/base_about.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/ico" href="{% static "img/favicon.ico" %}">
     <style>.endless_container {
         text-align: center;
-    }</style>{% block title %}<title>Blog de Skyfolk</title>{% endblock %}</head>
+    }</style>{% block title %}<title>Skyfolk // Blog</title>{% endblock %}</head>
 <body>
 <nav class="blue darken-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Blog de Skyfolk.</a></div>
